# chess

./: Makefile  Makefile.am  README.md  configure.ac  draw.c  game.c  input.c  main.c  utils.c
include/: draw.h  game.h  input.h  utils.h
